# Animus

./: .claudeignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  TODO.md  cliff.toml  package.json
.claude/: ARCHITECTURE_MAP.md  COMMON_MISTAKES.md  QUICK_START.md
crates/animus-core/: Cargo.toml
crates/animus-core/src/: character_card.rs  content_rating.rs  lib.rs  persona.rs  settings.rs
crates/animus-db/: Cargo.toml
crates/animus-db/.sqlx/: query-4d47666285b6f7e7c5559b41bccd18806b15bf8b750f023488c2ba84a142d293.json  query-ed8f4f1ce7a4104688edd6a4ca5fea5d4623147ccd41d26e15b06c2a4c290e00.json  query-f632189ef760cc97a8964f42f4f11c1ccf2f456e1223a499fcdd1d360bb15038.json
crates/animus-db/migrations/: 001_initial.sql  002_personas_unique_name.sql  003_structured_persona_fields.sql  004_create_app_settings.sql
crates/animus-db/src/: conversation_repo.rs  lib.rs  message_repo.rs  persona_repo.rs  settings_repo.rs  summary_repo.rs
crates/animus-llm/: Cargo.toml
crates/animus-llm/src/: lib.rs  ollama.rs  prompt.rs
crates/animus-server/: Cargo.toml
crates/animus-server/src/: error.rs  main.rs  state.rs  summary_trigger.rs
crates/animus-server/src/routes/: conversations.rs  health.rs  mod.rs  personas.rs  settings.rs  summary.rs
docs/: design-character-driving.md
docs/rest/Animus/: opencollection.yml
docs/rest/Animus/Create/: api-personas (Duplicate).yml  api-personas (Happy path).yml  api-personas (Missing Name).yml
docs/rest/Animus/Delete/: api-personas--id (Not found).yml  api-personas--id (Success).yml
docs/rest/Animus/Get/: api-personas (Empty list).yml  api-personas (Filter by rating).yml  api-personas (List all).yml  api-personas--id (Not found).yml  api-personas--id (Success).yml  folder.yml
docs/rest/Animus/Import/: api-personas-import (Bad JSON).yml  api-personas-import (Duplicate).yml  api-personas-import (Invalid spec).yml  api-personas-import (happy).yml  folder.yml
docs/rest/Animus/environments/: Animus.yml
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ImportPersonaModal.tsx  OllamaStatusBadge.tsx  PersonaCard.tsx
frontend/src/components/persona-form/: AvatarDropzone.tsx  BackgroundDropzone.tsx  FieldLabel.tsx  PersonaFormFields.tsx  RatingSelector.tsx  ResponseStylePresetSelector.tsx  SectionCard.tsx  TemplateSelector.tsx  index.ts
frontend/src/components/utils/: persona-form-utils.ts
frontend/src/hooks/: useOllamaStatus.ts  usePersonas.ts  useStreamingMessage.ts
frontend/src/lib/: api.ts  readAsDataUrl.ts
frontend/src/pages/: ChatPage.tsx  CreatePersonaPage.tsx  EditPersonaPage.tsx  PersonaListPage.tsx  SummaryDrawer.tsx
frontend/src/types/: api.ts
