[workspace]
members = [
    "crates/animus-core",
    "crates/animus-db",
    "crates/animus-llm",
    "crates/animus-server",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
anyhow = "1.0.102"
uuid = { version = "1.23.0", features = ["v7", "serde"] }
tracing = "0.1.44"
tokio = { version = "1.51.1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "uuid", "migrate"] }
