[package]
name = "animus-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
animus-core = { path = "../animus-core" }
uuid = { workspace = true }
serde = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { version = "0.3.32" }
async-stream = { workspace = true }
bytes-stream = "0.0.3"
tokio-stream = { version = "0.1.18", features = ["io-util"] }
tokio-util = "0.7.18"
